--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "console.table": "^0.10.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "pg": "^8.12.0"
   }
